# get-image-egl

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  common.cpp  common.h  get_gl_info.cpp  get_image.cpp  simple.frag
buildscripts/: 1-install-deps-appveyor.sh  1-install-deps-travis.sh  2-build-appveyor.sh  2-build-travis.sh  3-release-appveyor.sh  3-release-travis.sh
